[package]
name = "diesel-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.5", features = ["extras", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] } # uuidv07
uuid = { version = "1.11", features = ["serde", "v4", "js"] }
serde = { version = "1.0", features = ["derive", "rc"] }
